--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -17,13 +17,13 @@
     }
 
 
-    h1, h2 {
+    h1, h2, h3 {
         font-family: var(--heading-font);
         color: var(--primary-color);
     }
 
     header {
-        padding: 25px;
+        padding: 10px;
         background-color: var(--accent1-color);
     }
 
@@ -34,6 +34,12 @@
 
     p {
         padding: 25px;
+    }
+
+    main {
+        background-color: var(--nav-background-color);
+        font-size: 1.2rem;
+        display: inline;
     }
 
     nav {
@@ -65,19 +71,20 @@
     /* Class selectors */
 
     .hero img {
-        display: absolute;
+        display: block;
+        float: right;
         width: 300px;
         height: 100%;
         margin: 0% auto;
-        background-color: #d3b143;
+        background-color: #625015;
       }
 
     .hero h1 {
         position: absolute;
-        top: 350px;
-        width: 100%;
+        top: 300px;
+        width: 50%;
         margin: 0 auto;
-        background-color: #cbcb27;
+        background-color: #b0b099;
     }
 
     .hero article {
