--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,20 +4,54 @@
     box-sizing: border-box;
 }
 
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+  }
+
 
 nav {
-    background-color: steelblue;
-    padding: 10px;
+  background-color: steelblue;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
+.grid {
+    display: grid;
+    align-items: center;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+  }
+  
+  aside {
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
 nav a {
-    color: white;
+    color: #fff;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    align-self: auto;
+    justify-content: space-around;
+/*     align-items: center; */
+/*     justify-content: space-evenly; */
 }
 
 h1  {
     color: steelblue;
+    width: 100%;
+    border-bottom: #7c4040;
 }
 /*  */
 main img  {
