--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -10,7 +10,7 @@
     --heading-font: 'Roboto', sans-serif;
     --paragraph-font:'Roboto', sans-serif;
 
-    --nav-background-color: #DFD57F;
+    --nav-background-color: #c2b967;
     --nav-link-color: #6A643A;
     --nav-hover-link:#B5A14B;
     --nav-hover-background-color: #985910;
@@ -23,8 +23,59 @@
     }
 
     header {
-        padding: 10px;
+        padding: 100px;
         background-color: var(--accent1-color);
+	    display: grid;
+	    grid-template-columns: 500px 1fr 2fr;
+	    align-items: center;
+	    border-bottom: 1px solid #ccc;
+    }
+    
+    header, footer {
+        max-width: 840px;
+        margin: 0 auto;
+    }
+
+    .logo img {
+        margin: 0 0.29rem 0 rem;
+        width: 50px;
+        height: fit-content;
+        display: flex;
+        justify-content: end;
+    }
+
+
+
+    h1 {
+        font-size: 2rem;
+        font-family: Acme, Arial, sans-serif;
+        color: #625015;
+    }
+    
+    nav {
+        text-align: center;
+    }
+
+    .navigation {
+        display: flex;
+        list-style: none;
+    }
+    
+    .navigation li {
+        flex: 1 1 100%;
+    }
+    
+    .navigation a {
+        display: block;
+        color: navy;
+        padding: 20px;
+        text-decoration: none;
+    }
+    
+    .navigation a:hover {
+        color: tomato;
+        font-weight: 700;
+        text-decoration: underline;
     }
 
     body {
@@ -44,8 +95,10 @@
 
     nav {
         background-color: var(--nav-background-color);
-        font-size: 1.2rem;
+        font-size: 1rem;
         display: flex;
+        justify-content: space-evenly;
+        align-items: center;
     }
 
     nav a {
@@ -115,6 +168,12 @@
         padding: 1rem;
         color: #000;
         width: 100%;
+    }
+
+    .gallery { 
+        display: flex;
+        justify-content: space-evenly;
+        flex-flow: row nowrap;
     }
 
 
