--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -17,43 +17,73 @@
     }
 
 
-    h1, h2, h3 {
+    h1, h2, h3, h4, h5, h6 {
         font-family: var(--heading-font);
         color: var(--primary-color);
     }
 
-    header {
-        padding: 100px;
-        background-color: var(--accent1-color);
-	    display: grid;
-	    grid-template-columns: 500px 1fr 2fr;
-	    align-items: center;
-	    border-bottom: 1px solid #ccc;
-    }
+    /* header, .grid { */
+    /*     /* padding: 100px; */ */
+    /*     background-color: var(--accent1-color); */
+	/*     margin: 1rem auto; */
+	/*     display: grid; */
+	/*     grid-template-columns: 120px 1fr 2fr; */
+	/*     align-items: center; */
+	/*     border-bottom: 1px solid #ccc; */
+	/*     max-width: 200px;   */
+    /*     justify-content: space-between;       */
+    /* } */
     
-    header, footer {
-        max-width: 840px;
-        margin: 0 auto;
+    header {
+        display: grid;
+        grid-template-columns: 400px 1fr 0.5fr;
     }
+
+    header img {
+        margin-left: 150px;
+    }
+
+    .hero {
+        margin-left: 50px;
+    }
+
+    .hero img {
+        /* display: block; */
+        float: right;
+        width: 1200px;
+        height: 700px;
+        margin-bottom: 10px;
+        margin-right: 30px;
+        /* background-color: #625015; */
+      }
+
+    
+
+
+    
+    /* header, footer { */
+    /*     max-width: 840px; */
+    /*     margin: 0 auto; */
+    /* } */
 
     .logo img {
-        margin: 0 0.29rem 0 rem;
-        width: 50px;
-        height: fit-content;
+        margin: 0 0.25rem 0 1rem;
+        width: 64px;
+        height: auto;
         display: flex;
-        justify-content: end;
+        justify-content: flex-start;
     }
-
-
 
     h1 {
         font-size: 2rem;
         font-family: Acme, Arial, sans-serif;
-        color: #625015;
+        /* color: #625015; */
     }
     
     nav {
-        text-align: center;
+        text-align: right;
+        display: flex;
+        justify-content: flex-end;
     }
 
     .navigation {
@@ -97,8 +127,8 @@
         background-color: var(--nav-background-color);
         font-size: 1rem;
         display: flex;
-        justify-content: space-evenly;
-        align-items: center;
+        justify-content: flex-end;
+        align-items: flex-end;
     }
 
     nav a {
@@ -123,22 +153,14 @@
 
     /* Class selectors */
 
-    .hero img {
-        display: block;
-        float: right;
-        width: 300px;
-        height: 100%;
-        margin: 0% auto;
-        background-color: #625015;
-      }
 
-    .hero h1 {
-        position: absolute;
-        top: 300px;
-        width: 50%;
-        margin: 0 auto;
-        background-color: #b0b099;
-    }
+
+
+
+
+
+
+
 
     .hero article {
         position:absolute;
@@ -176,7 +198,7 @@
         flex-flow: row nowrap;
     }
 
-
+    
 
  
 /* main{ */
